# lib-paperless-ngx-rs

./: Cargo.toml  README.md
src/: client.rs  correspondent.rs  document.rs  errors.rs  lib.rs  page.rs  task.rs  types.rs
